<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/etCellNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/hint_cell"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:onClick="btnSubmit"
        android:text="@string/btn_submit" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnShowData"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/btn_show_data"
        android:onClick="btnShowData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditData"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/btn_edit_data"
        android:onClick="btnEditData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeleteData"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/btn_delete_data"
        android:onClick="btnDeleteData"/>

</LinearLayout>